scrape result list no longer causes horizontal scrolling

--- a/packages/admin/src/scss/admin.scss
+++ b/packages/admin/src/scss/admin.scss
@@ -44,6 +44,7 @@ h5.inner {
 
 div.card-main {
   min-height: 100%;
+  margin-right: 2rem;
   
   & .card-header {
     padding: 0.75rem 0.75rem 0.75rem $spacer * 2.5;    
